# waypoint-plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
launch/: rviz.launch  waypoint_plugin.rviz
meida/: axis.dae
src/: waypoint_tool.cpp  waypoint_tool.h  waypoint_widget.cpp  waypoint_widget.h
ui/: waypoint_plugin.ui
